@@ -1,3 +1,8 @@
+2008-07-27  Curtis Gedak  <gedakc@gmail.com>
+
+	* gparted.in: Added additional check for hald daemon if hal-lock exists
+	  - Closes GParted bug #543730
+
 2008-07-26  Curtis Gedak  <gedakc@gmail.com>
 
 	* configure.in: Removed full path from gksu
